--- a/assets/css/apps/mail/views/mail-index.css
+++ b/assets/css/apps/mail/views/mail-index.css
@@ -1,4 +1,6 @@
  /* mail index  */
  .mail-index {
      background-color: bisque;
+     /* display: grid; */
+     /* grid-template-columns: 250px 1fr; */
  }
