--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,4 +30,5 @@
 
 /* note app views */
 @import './apps/note/views/note-index.css';
-@import './apps/note/cmps/note-preview.css'
+@import './apps/note/cmps/note-preview.css';
+@import './apps/note/views/note-create.css';
