added "Add New Mail" modal, that pops up  when clicked on New Mail Button. Also added functionality for DELETE button

--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -21,3 +21,19 @@ img {
     width: 100%;
     object-fit: cover;
 }
+
+.btnLook,
+.btnLookIcon {
+    background-color: var(--mail-bg-clr0);
+}
+
+.btnLookIcon {
+    padding-inline: 5px;
+    margin-inline: 5px;
+}
+
+.btnLookIcon:hover,
+.btnLook:hover {
+    background-color: var(--mail-bg-clr1);
+    cursor: pointer;
+}
