--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,18 +12,22 @@
 /* Views */
 @import './views/home.css';
 /* @import './apps/note/views/note-index.css'; */
-@import './apps/mail/views/mail-index.css';
+
 
 /* Cmps */
 
 @import './cmps/user-msg.css';
 @import './cmps/app-header.css';
 
-/* mail app cmps*/
+/* Mail App Cmps*/
 @import './apps/mail/cmps/mail-main.css';
 @import './apps/mail/cmps/mail-list.css';
 @import './apps/mail/cmps/mail-nav-side-bar.css';
 @import './apps/mail/cmps/mail-preview.css';
+@import './apps/mail/cmps/mail-add.css';
+
+/* Mail App Views */
+@import './apps/mail/views/mail-index.css';
 
 /* note app cmps*/
 @import './apps/note/cmps/note-list.css';
