sorted the way navigate works in the mail app, to be organized and logical. added options for listing other views (starred/sent/trash/etc...)

--- a/assets/css/apps/mail/cmps/mail-nav-side-bar.css
+++ b/assets/css/apps/mail/cmps/mail-nav-side-bar.css
@@ -1,3 +1,8 @@
 .mail-nav-side-bar {
     background-color: chartreuse;
 }
+
+.mail-nav-sidebar-links{
+    display: flex;
+    flex-direction: column;
+}
