--- a/assets/css/apps/mail/views/mail-index.css
+++ b/assets/css/apps/mail/views/mail-index.css
@@ -5,3 +5,9 @@
      flex-direction: column;
      position: relative;
  }
+
+ .mail-main {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    height: 100%;
+}
