--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,26 +1,22 @@
 /* Setup */
-
 @import './setup/variables.css';
 /* @import './setup/fonts.css'; */
 
 /* Basics */
-
 @import './basics/base.css';
 @import './basics/helpers.css';
 @import './basics/layout.css';
 
 /* Views */
 @import './views/home.css';
-/* @import './apps/note/views/note-index.css'; */
-
 
 /* Cmps */
-
 @import './cmps/user-msg.css';
 @import './cmps/app-header.css';
 
+
+/*----------MAIL APP----------*/
 /* Mail App Cmps*/
-@import './apps/mail/cmps/mail-main.css';
 @import './apps/mail/cmps/mail-list.css';
 @import './apps/mail/cmps/mail-nav-side-bar.css';
 @import './apps/mail/cmps/mail-preview.css';
@@ -29,6 +25,8 @@
 /* Mail App Views */
 @import './apps/mail/views/mail-index.css';
 
+
+/*----------NOTE APP----------*/
 /* note app cmps*/
 @import './apps/note/cmps/note-list.css';
 @import './apps/note/cmps/note-preview.css';
