update color pallete function in note-index and note-change-color.jsx

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,7 @@
 /* note app cmps*/
 @import './apps/note/cmps/note-list.css';
 @import './apps/note/cmps/note-preview.css';
+@import './apps/note/cmps/note-colors.css';
 
 /* note app views */
 @import './apps/note/views/note-index.css';
