--- a/assets/css/apps/note/cmps/note-colors.css
+++ b/assets/css/apps/note/cmps/note-colors.css
@@ -1,13 +1,20 @@
-  /* color pallte styleing */
-
-  .colors-container{
+.colors-container {
     display: flex;
     flex-wrap: wrap;
-    gap:5px;
-  }
+    justify-content: center;
+    gap: 10px;
+}
 
-  .div-color{
+.div-color {
+    margin: 1rem 0;
     width: 50px;
     height: 50px;
     cursor: pointer;
-  }
+    border-radius: 50%;
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+
+    &:hover {
+        transform: scale(1.2);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+}
