--- a/assets/css/apps/mail/views/mail-index.css
+++ b/assets/css/apps/mail/views/mail-index.css
@@ -1,13 +1,13 @@
  /* mail index  */
  .mail-index {
-     background-color: bisque;
+     background-color: var(--mail-bg-clr0);
      display: flex;
      flex-direction: column;
      position: relative;
  }
 
  .mail-main {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    height: 100%;
-}
+     display: grid;
+     grid-template-columns: 250px 1fr;
+     height: 100%;
+ }
