--- a/assets/css/setup/variables.css
+++ b/assets/css/setup/variables.css
@@ -2,6 +2,11 @@
     --main-bg-color: lightblue;
 
 
-    --mail-bg-clr0: rgb(236, 236, 236);
-    --mail-bg-clr1: rgb(224, 224, 224);
+    --mail-bg-clr0: rgb(248, 248, 248);
+    --mail-bg-clr1: rgb(236, 236, 236);
+    --mail-bg-clr2: rgb(224, 224, 224);
+
+
+
+    --mail-gap-padding:10px;
 }
