--- a/assets/css/apps/note/cmps/note-list.css
+++ b/assets/css/apps/note/cmps/note-list.css
@@ -1,5 +1,9 @@
  /* note list */
-
+ body{
+  background-color: #fff;
+  color: #202124;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+ }
  .ul-notes {
     display: flex;
     flex-wrap: wrap;
@@ -7,6 +11,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    color: #202124;
   }
   
   .section-notes {
@@ -18,6 +23,7 @@
     border-radius: 5px;
     background-color: #ffffff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    
   }
 
   .div-actions {
