--- a/assets/css/views/home.css
+++ b/assets/css/views/home.css
@@ -1,1 +1,101 @@
- /* home */
+.home {
+    background-color: #fff;
+    color: #3F3D56;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.div-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.div-header-text {
+    width: 50%;
+    padding-right: 20px;
+}
+
+.div-header-text h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+.div-header-text h2 {
+    font-size: 24px;
+    font-weight: 400;
+    margin-bottom: 40px;
+}
+
+.div-header-image {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-logo {
+    width: 80%;
+}
+
+.div-header-text button {
+    margin-right: 10px;
+    margin-bottom: 40px;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 18px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    background-color: #3F3D56;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .div-header-text button:hover {
+    background-color: #FFAE80;
+    color: #3F3D56;
+    transform: translateY(-2px);
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
+  }
+  
+
+
+@media (max-width: 1400px) {
+    .div-header-text h1 {
+        font-size: 40px;
+    }
+    .div-header-text h2 {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .div-header-text h1 {
+        font-size: 30px;
+    }
+    .div-header-text h2 {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 1000px){
+    .div-header{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 800px){
+   
+
+    .div-header-text h1 {
+        font-size: 25px;
+    }
+    .div-header-text h2 {
+        font-size: 15px;
+    }
+}
