--- a/assets/css/apps/mail/cmps/mail-nav-side-bar.css
+++ b/assets/css/apps/mail/cmps/mail-nav-side-bar.css
@@ -2,18 +2,52 @@
     background-color: var(--mail-bg-clr1);
 }
 
-.mail-nav-sidebar-links{
+.mail-nav-sidebar-links {
     display: flex;
     flex-direction: column;
+    margin-top: 16px;
+
     /* gap:var(--mail-gap-padding); */
 }
 
-.mail-nav-sidebar-links>*{
+.mail-nav-sidebar-links>* {
     padding-block: var(--mail-gap-padding);
 }
 
-.btnNewMail{
-    padding-block: var(--mail-gap-padding);
-    font-size: 1.5em;
-    /* padding-block: calc(var(--mail-gap-padding) * 3); */
+.btnNewMail {
+    background-color: #1a73e8;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 8px 16px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: background-color 0.2s ease-in-out;
 }
+
+.btnNewMail:hover {
+    background-color: #0d47a1;
+}
+
+.mail-nav-sidebar-links a {
+    color: #202124;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    width:80%;
+    
+}
+
+.mail-nav-sidebar-links a:hover {
+    background-color: #c9c9c9;
+}
+
+.mail-nav-sidebar-links a i {
+    margin-right: 8px;
+    width: 20px;
+  }
