--- a/assets/css/apps/note/cmps/note-create-buttons.css
+++ b/assets/css/apps/note/cmps/note-create-buttons.css
@@ -27,6 +27,10 @@
     color: #E2E2E3;
 }
 
+.btn-create-list{
+    cursor:not-allowed;
+}
+
 .btn-create-text {
     border-radius: 20px 0 0 20px;
 }
