--- a/assets/css/apps/mail/cmps/mail-preview.css
+++ b/assets/css/apps/mail/cmps/mail-preview.css
@@ -1,3 +1,11 @@
+.mail-preview{
+    white-space: nowrap;
+    display: flex;
+    position: relative;
+    min-width: 0;
+}
+
+
 .mail-unread {
     font-weight: 700;
     background-color: var(--mail-bg-clr1);
@@ -10,4 +18,3 @@
 .goldStar:hover {
     color: inherit;
 }
-
