slightly improved mail preview

--- a/assets/css/apps/mail/cmps/mail-preview.css
+++ b/assets/css/apps/mail/cmps/mail-preview.css
@@ -1,10 +1,13 @@
-.mail-preview{
+.mail-preview {
     white-space: nowrap;
     display: flex;
     position: relative;
     min-width: 0;
 }
 
+.mail-preview>*:not(.mail-buttons) {
+    display: flex;
+}
 
 .mail-unread {
     font-weight: 700;
@@ -17,4 +20,26 @@
 
 .goldStar:hover {
     color: inherit;
+}
+
+.mail-star {
+    width: 40px;
+}
+
+.mail-title {
+    max-width: 110px;
+    /* overflow: hidden; */
+    padding-inline-end: calc(var(--mail-gap-padding) * 3);
+    flex-basis: 110px;
+}
+
+.mail-title span {
+    overflow: hidden;
+}
+
+.mail-content {
+    flex-basis: auto;
+    /* flex: 1 1 auto; */
+    min-width: 0;
+    padding-inline-end: 10px;
 }
