--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -1,36 +1,90 @@
 .app-header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.app-header img {
+  height: 3rem;
+}
+
+.app-header h3 {
+  font-size: 2rem;
+  margin-left: 0.5rem;
+  color: #000;
+}
+
+.app-header nav {
+  display: flex;
+}
+
+.app-header a {
+  margin-left: 1rem;
+  color: #000;
+  font-weight: bold;
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
+
+.app-header a:hover {
+  color: #FFAE80;
+}
+
+/* hamburget menu design */
+
+.hamburger-menu {
+  display: none;
+  cursor: pointer;
+  margin-right: 24px;
+}
+
+.hamburger-menu span {
+  display: block;
+  height: 3px;
+  width: 25px;
+  background-color: #000;
+  margin-bottom: 5px;
+}
+
+.menu-open .hamburger-menu span:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.menu-open .hamburger-menu span:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-open .hamburger-menu span:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+/* hamburger menu */
+@media screen and (max-width: 800px) {
+  .app-header nav {
+    display: none;
+    flex-direction: column;
     align-items: center;
-    padding: 1rem;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 1rem;
+  }
+
+  .app-header nav.show {
+    display: flex;
+    position: fixed;
+    right: 20px;
+    top: 70px;
+    background-color: #3F3D56;
     
   }
-  
-  .app-header img {
-    height: 3rem;
-  }
-  
-  .app-header h3 {
-    font-size: 2rem;
-    margin-left: 0.5rem;
-    color: #000;
-  }
-  
-  .app-header nav {
-    display: flex;
-  }
-  
+
   .app-header a {
-    margin-left: 1rem;
-    color: #000;
-    font-weight: bold;
-    text-decoration: none;
-    transition: color 0.2s ease-in-out;
+    margin: 0.5rem;
+    color: #FFFFFF;
   }
-  
-  .app-header a:hover {
-    color: #FFAE80;
+
+  .app-header .hamburger-menu {
+    display: block;
   }
-  
+}
