--- a/assets/css/views/home.css
+++ b/assets/css/views/home.css
@@ -81,6 +81,13 @@
     }
 }
 
+@media (max-width: 1100px){
+    .div-header-text {
+        margin-top:170px;
+        
+    }
+}
+
 @media (max-width: 1000px){
     .div-header{
         display: flex;
