--- a/assets/css/apps/note/views/note-editor.css
+++ b/assets/css/apps/note/views/note-editor.css
@@ -78,3 +78,73 @@ input[type="url"],
   background-color: #2f3b5f;
   color: #E2E2E3;
 }
+
+@media (max-width: 1300px){
+  .editor-panel{
+    top:30%;
+    left:37%;
+  }
+}
+
+@media (max-width: 1200px){
+  .editor-panel{
+    top:30%;
+    left:33%;
+  }
+}
+
+@media (max-width: 1100px){
+  .editor-panel{
+    top:30%;
+    left:30%;
+  }
+}
+
+@media (max-width: 1000px){
+  .editor-panel{
+    top:30%;
+    left:27%;
+  }
+}
+
+@media (max-width: 900px){
+  .editor-panel{
+    top:30%;
+    left:27%;
+  }
+}
+
+@media (max-width: 800px){
+  .editor-panel{
+    top:30%;
+    left:24%;
+  }
+}
+
+@media (max-width: 700px){
+  .editor-panel{
+    top:30%;
+    left:21%;
+  }
+}
+
+@media (max-width: 600px){
+  .editor-panel{
+    top:30%;
+    left:18%;
+  }
+}
+
+@media (max-width: 500px){
+  .editor-panel{
+    top:30%;
+    left:15%;
+  }
+}
+
+@media (max-width: 400px){
+  .editor-panel{
+    top:30%;
+    left:12%;
+  }
+}
