--- a/assets/css/views/home.css
+++ b/assets/css/views/home.css
@@ -54,19 +54,20 @@
     color: #fff;
     border: none;
     cursor: pointer;
-  }
-  
-  .div-header-text button:hover {
+}
+
+.div-header-text button:hover {
     background-color: #FFAE80;
     color: #3F3D56;
     transform: translateY(-2px);
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
-  }
-  
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
 @media (max-width: 1400px) {
     .div-header-text h1 {
         font-size: 40px;
     }
+
     .div-header-text h2 {
         font-size: 20px;
     }
@@ -76,42 +77,52 @@
     .div-header-text h1 {
         font-size: 30px;
     }
+
     .div-header-text h2 {
         font-size: 18px;
     }
 }
 
-@media (max-width: 1100px){
+@media (max-width: 1100px) {
     .div-header-text {
-        margin-top:170px;
-        
+        margin-top: 170px;
+
     }
 }
 
-@media (max-width: 1000px){
-    .div-header{
+@media (max-width: 1000px) {
+    .div-header {
         display: flex;
         flex-direction: column;
     }
+
+    .div-header-text{
+        padding-top: 150px;
+    }
+
+    .img-logo{
+        padding-bottom: 100px;
+    }
 }
 
-@media (max-width: 800px){
-   
+@media (max-width: 800px) {
 
     .div-header-text h1 {
         font-size: 25px;
     }
+
     .div-header-text h2 {
         font-size: 15px;
     }
 }
 
-@media (max-width: 600px){
-   
+@media (max-width: 600px) {
+
 
     .div-header-text h1 {
         font-size: 20px;
     }
+
     .div-header-text h2 {
         font-size: 15px;
     }
