--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -2,18 +2,22 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0 1rem;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.header-nav{
+  display: flex;
+  align-items: center;
+}
+
 .app-header img {
-  height: 3rem;
+  height: 6rem;
 }
 
 .app-header h3 {
   font-size: 2rem;
-  margin-left: 0.5rem;
   color: #000;
 }
 
